--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ main{
 }
 
 footer{
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding: 11px;
@@ -81,13 +82,13 @@ footer{
 main img{
     box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.301);
 }
-.rodape> a{
+.rodape a{
 color: white;
 border-right-color: rgba(0, 0, 0, 0);
 margin-right: 0px;
 padding: 0px;
 }
-.rodape>a:hover{
+.rodape > a:hover{
     text-decoration: underline;
     font-size: 1.1em;
 }
